# wantengine-life-agent

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
config/: default.yaml  scenarios.yaml
outputs/: multi_agent_metrics.csv
pet/: desktop_pet_wantengine.py  moe_pet_life.py
sim/: run_autonomy_pulse_demo.py  run_demo.py  run_evolution_lab_v1.py  run_multi_agent.py  run_multi_agent_collab_demo.py  run_want_engine_demo.py
src/life_agent/: __init__.py  agent.py  attachment.py  eidolon.py  finis.py  metrics.py  vitalis.py
src/life_agent/autonomy/: __init__.py  pulse.py
src/life_agent/evolution_lab/: __init__.py  arena.py  genome.py  lifecycle.py  selection.py
src/life_agent/multi_agent/: __init__.py  memory_bus.py  orchestrator.py  protocol.py  roles.py
src/life_agent/want_engine/: __init__.py  executor.py  loop.py  state.py  taskgen.py
src/wantengine_life_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_autonomy_pulse_m4.py  test_evolution_lab_v1.py  test_memory_bus_m2.py  test_multi_agent.py  test_multi_agent_collab.py  test_protocol_m3.py  test_smoke.py  test_want_engine_v02.py
